[package]
name = "hist-temps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
regex = "1"
chrono = "0.4.21"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.16", features = ["derive"] }
